2003-08-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/lilypond-profile.sh: Add workaround for zsh posix
	problem.

2003-08-04  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/user/refman.itely (Text markup): Fix language bug.

2003-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Text markup): add note about
	raise/lower with ^ or _ .
	
	* po/fi.po: fix \\apply strings.

	* lily/parser.yy (open_event): warn for prefix articulations.

2003-08-04  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/all-font-metrics.cc (find_font): bugfix: apply Han-Wen's last
	fix also on parmesan font.

2003-08-03  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION 1.7.30 released
	
	* GNUmakefile.in (EXTRA_DIST_FILES): remove lexer GCC patch.

	* buildscripts/mutopia-index.py (headertext): rewording

2003-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (strut-markup): new markup function.

	* scm/bass-figure.scm (make-bass-figure-markup): insert vertical
	space also when no accidental is there.

2003-08-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/les-nereides.ly: Updates.

2003-08-02  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-insert-tag-current): new function,
	which repeats the tag insertion selected from "Insert tag" menu.

2003-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/all-font-metrics.cc (find_font): load AFM files first only
	for feta fonts. This fixes problems with TeXlive and other TeX
	distros that include AFM files for the CM fonts. 

	* scm/font.scm (qualifiers-to-font-name): remove.

	* lily/paper-def.cc: remove get_var.

	* input/trip.ly: remove file.
	
	* input/regression/spacing-note-flags.ly (raggedright): remove
	stafflinethickness

	* input/les-nereides.ly: update to new syntax, cleanups.

2003-08-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/refman.itely: Clarify shortest-note problem
	of autobeamer.

2003-08-01  Heikki Junes <hjunes@cc.hut.fi>
