@@ -1,4 +1,4 @@
-q@c Note: -*-texinfo-*-
+@c Note: -*-texinfo-*-
 @c
 @c A menu is needed before every deeper *section nesting of @node's; run
 @c     M-x texinfo-all-menus-update
