@@ -50,31 +50,38 @@ EXAMPLE 3: Global installation
 
 
 EOF
+
+
+## If the message above is printed erroneously,
+## the following commands  kills the current terminal/shell.
+## hence the ZSH  test above.
+
     exit 2 
-fi
-
-if [ -z "$LILYPONDPREFIX" ]; then
-    datadir=`echo "@local_lilypond_datadir@" | sed 's!//!/!g'`
 else
-    if [ -d "$LILYPONDPREFIX/share" ]; then
-	datadir=$LILYPONDPREFIX/share/lilypond/
-    fi
-    echo "Setting tree to $datadir"
+
+	if [ -z "$LILYPONDPREFIX" ]; then
+	    datadir=`echo "@local_lilypond_datadir@" | sed 's!//!/!g'`
+	else
+	    if [ -d "$LILYPONDPREFIX/share" ]; then
+		datadir=$LILYPONDPREFIX/share/lilypond/
+	    fi
+	    echo "Setting tree to $datadir"
+	fi
+
+	# Add the installation directory to the teTeX system tree, 
+	# see Documentation/misc/fontinstallation
+	TEXMF="{$datadir,"`kpsexpand  \\$TEXMF`"}"
+	export TEXMF
+
+	# For direct ps output: ps/lilyponddefs.ps
+	## GS_LIB="$datadir/ps:"${GS_LIB:=""}
+	## export GS_LIB
+
+	# For direct ps output fonts. Add all available TeX Type1 fonts
+	## GS_FONTPATH=`kpsewhich -expand-path=\\$T1FONTS`:${GS_FONTPATH:=""}
+	## export GS_FONTPATH
+
 fi
-
-# Add the installation directory to the teTeX system tree, 
-# see Documentation/misc/fontinstallation
-TEXMF="{$datadir,"`kpsexpand  \\$TEXMF`"}"
-export TEXMF
-
-# For direct ps output: ps/lilyponddefs.ps
-## GS_LIB="$datadir/ps:"${GS_LIB:=""}
-## export GS_LIB
-
-# For direct ps output fonts. Add all available TeX Type1 fonts
-## GS_FONTPATH=`kpsewhich -expand-path=\\$T1FONTS`:${GS_FONTPATH:=""}
-## export GS_FONTPATH
-
  	
 
 
