@@ -4,7 +4,7 @@ texidoc = "Broken crescendi should be open on one side."
 }
 
 \score { \notes \relative c'' { 
-    c1 \< \break \! c1  \> \break \! c1 
+    c1 \< \break c1-\!  \> \break c1-\!
   }
   \paper {
     linewidth = 4.\cm
