@@ -10,7 +10,7 @@ Also shown: a trick to get an extender at the end of the staff.
 
 sopran = \notes \relative c'' {
 \time 3/4 a2.( | \break
-)g2 < g4 { s8 s8 } > |
+ g2-) < g4 { s8 s8 } > |
 }
 
 text = \lyrics {
