@@ -7,14 +7,14 @@ texidoc="Multi measure rests of second voice should not disappear."
 #(ly:set-point-and-click 'line-column)
 one = \notes\relative c'' {
 
-	f4 \!e-.-\f r2|
+	f4 e-\!-.-\f r2|
 	R1|
 	f2-\p-(es -)|
 	d1\<|
 	d1|
 	d2 d2|
 	d2 d2|
-	\!f1-\ff  |
+	f1-\!-\ff  |
 	f1
 }
 
