@@ -8,7 +8,7 @@ texidoc= "Text spanners should not repeat start text when broken."
     \property Voice.crescendoText = #"cresc."
     \property Voice.crescendoSpanner = #'dashed-line
     c1\< c \break
-    c1 \!c \break
+    c1 c-\! \break
     }
   \paper {
     linewidth = 40*\staffspace
