@@ -1670,12 +1670,6 @@ open_event:
 		$$ = $1;
 		dynamic_cast<Music *> ($$)->set_mus_property ("span-direction", gh_int2scm (STOP))
 ;
-		static int warn_count ;
-		if (warn_count < 10)
-			{
-			$$->origin ()->warning (_("Prefix articulations are deprecated. Use postfix notation instead."));
-			warn_count ++;
-			}
 	}
 	;
 
@@ -1763,6 +1757,13 @@ pre_events:
 		$$ = SCM_EOL;
 	}
 	| pre_events open_event {
+		static int warn_count ;
+		if (warn_count < 10)
+			{
+			$2->origin ()->warning (_("Prefix articulations are deprecated. Use postfix notation instead."));
+			warn_count ++;
+			}
+
 		$$ = gh_cons ($2->self_scm(), $$);
 		scm_gc_unprotect_object ($2->self_scm());
 	}
